# data-dict

./: .gitignore  AGENTS.md  Cargo.toml  README.md  download-examples.R  schema.yaml  spec.md
.claude/: claude.md
crates/data-dict/: Cargo.toml
crates/data-dict-cli/: Cargo.toml
crates/data-dict-cli/skills/: read-data-dict.md  write-data-dict.md
crates/data-dict-cli/skills/read-data-dict/: SKILL.md
crates/data-dict-cli/skills/write-data-dict/: SKILL.md
crates/data-dict-cli/src/: main.rs
crates/data-dict-cli/tests/: cli.rs
crates/data-dict-cli/tests/fixtures/: multi-error-with-warning.yaml
crates/data-dict-cli/tests/snapshots/: cli__multiple_diagnostics_json_output.snap  cli__multiple_diagnostics_text_output.snap  cli__no_args_lists_all_subcommands.snap
crates/data-dict-lsp/: Cargo.toml
crates/data-dict-lsp/src/: lib.rs
crates/data-dict-parquet/: Cargo.toml
crates/data-dict-parquet/benches/: foreign_key.rs  uniqueness.rs
crates/data-dict-parquet/src/: column_scan.rs  dictionary.rs  foreign_key.rs  lib.rs  metadata.rs  scan.rs  uniqueness.rs
crates/data-dict/src/: assert_expr.rs  data.rs  diagnostic.rs  join_expr.rs  lib.rs  lint.rs  lower.rs  meta.rs  model.rs  problem.rs  schema.rs  validate_data.rs  validate_meta.rs  validate_schema.rs  validate_spec.rs
crates/data-dict/tests/: compare.rs  validate.rs  validate_data.rs  validate_meta.rs  validate_parquet.rs  validate_schema.rs  validate_spec.rs
crates/data-dict/tests/common/: mod.rs
crates/data-dict/tests/fixtures/invalid/: bad-cardinality.yaml  bad-time-zone.yaml  enum-non-string-label.yaml  enum-without-values.yaml  missing-version.yaml  non-string-glossary-value.yaml  range-on-string-type.yaml  unknown-top-level-key.yaml
crates/data-dict/tests/fixtures/lint/: clean-two-tables.yaml  dd001-fk-no-relationship.yaml  dd002-missing-table.yaml  dd003-missing-column.yaml  dd004-bad-join.yaml  dd005-conflicts-not-on-both-sides.yaml  dd005-undeclared-conflict-ok.yaml  dd006-cardinality-mismatch.yaml  dd006-self-join-one-to-many.yaml  dd007-boolean-no-examples-ok.yaml  dd007-enum-without-values.yaml  dd007-other-type-missing-examples.yaml  dd007-range-type-missing-range.yaml  dd007-wrong-rep-on-enum.yaml  dd008-range-on-string-type.yaml  dd008-units-on-non-quantity.yaml  dd008-units-on-quantity-ok.yaml  dd009-time-zone-on-datetime-ok.yaml  dd009-time-zone-on-non-datetime.yaml  s05-conflicts-not-on-both-sides.yaml  s05-undeclared-conflict-ok.yaml  s06-cardinality-mismatch.yaml  s07-enum-without-values.yaml  s08-units-on-quantity-ok.yaml
crates/data-dict/tests/fixtures/schema/: s07-boolean-no-examples-ok.yaml  s08-units-on-quantity-ok.yaml
crates/data-dict/tests/fixtures/spec/: clean-two-tables.yaml  s01-fk-no-relationship.yaml  s02-missing-table.yaml  s03-missing-column.yaml  s04-bad-join.yaml  s05-conflicts-not-on-both-sides.yaml  s05-undeclared-conflict-ok.yaml  s06-cardinality-mismatch.yaml  s06-self-join-one-to-many.yaml  s07-boolean-no-examples-ok.yaml  s07-enum-without-values.yaml  s07-examples-on-boolean.yaml  s07-other-type-missing-examples.yaml  s07-range-on-string-type.yaml  s07-range-type-missing-range.yaml  s07-wrong-rep-on-enum.yaml  s08-range-on-string-type.yaml  s08-units-on-non-quantity.yaml  s08-units-on-quantity-ok.yaml  s10-duplicate-column-name.yaml  s11-empty-column-name.yaml  s11-empty-table-name.yaml  s12-date-not-iso.yaml  s12-datetime-no-timezone.yaml  s12-s13-valid-ok.yaml  s12-wrong-value-type.yaml  s13-descending-range.yaml  s14-single-table-description.yaml  s14-time-zone-on-non-datetime.yaml  s15-bad-time-zone.yaml  s16-single-table-description.yaml
crates/data-dict/tests/fixtures/valid/: ignore-type.yaml  minimal.yaml  no-learn-more.yaml  typeless-column.yaml
crates/data-dict/tests/snapshots/: validate__bad_time_zone.snap  validate__lint_dd001_fk_no_relationship.snap  validate__lint_dd002_missing_table.snap  validate__lint_dd003_missing_column.snap  validate__lint_dd004_bad_join.snap  validate__lint_dd005_conflicts_not_on_both_sides.snap  validate__lint_dd006_cardinality_mismatch.snap  validate__lint_dd006_self_join_one_to_many.snap  validate__lint_dd007_enum_without_values.snap  validate__lint_dd007_other_type_missing_examples.snap  validate__lint_dd007_range_type_missing_range.snap  validate__lint_dd007_wrong_rep_on_enum.snap  validate__lint_dd008_range_on_string_type.snap  validate__lint_dd008_units_on_non_quantity.snap  validate__lint_dd009_time_zone_on_non_datetime.snap  validate__lint_s01_fk_no_relationship.snap  validate__lint_s02_missing_table.snap  validate__lint_s03_missing_column.snap  validate__lint_s04_bad_join.snap  validate__lint_s05_conflicts_not_on_both_sides.snap  validate__lint_s06_cardinality_mismatch.snap  validate__lint_s06_self_join_one_to_many.snap  validate__lint_s07_enum_without_values.snap  validate__lint_s07_other_type_missing_examples.snap  validate__lint_s07_range_type_missing_range.snap  validate__lint_s07_wrong_rep_on_enum.snap  validate__lint_s08_range_on_string_type.snap  validate__lint_s08_units_on_non_quantity.snap  validate__missing_version.snap  validate__schema_s01_fk_no_relationship.snap  validate__schema_s02_missing_table.snap  validate__schema_s03_missing_column.snap  validate__schema_s04_bad_join.snap  validate__schema_s05_conflicts_not_on_both_sides.snap  validate__schema_s06_cardinality_mismatch.snap  validate__schema_s06_self_join_one_to_many.snap  validate__schema_s07_enum_without_values.snap  validate__schema_s07_other_type_missing_examples.snap  validate__schema_s07_range_type_missing_range.snap  validate__schema_s07_wrong_rep_on_enum.snap  (+86 more)
(+31 files in other folders)
