[workspace]
resolver = "2"
members = ["crates/data-dict", "crates/data-dict-cli", "crates/data-dict-parquet"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/hadley/data-dict.yaml"

[workspace.dependencies]
data-dict = { path = "crates/data-dict", version = "0.0.1" }
clap = { version = "4", features = ["derive"] }
quarto-yaml = "0.1.0"
quarto-yaml-validation = "0.1.0"
quarto-source-map = "0.1.0"
quarto-error-reporting = "0.1.0"
parquet = { version = "54", default-features = false }
data-dict-parquet = { path = "crates/data-dict-parquet", version = "0.0.1" }
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
