[package]
name = "data-dict-cli"
description = "Command-line tool for data-dict.yaml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "data-dict"
path = "src/main.rs"

[dependencies]
data-dict.workspace = true
data-dict-parquet.workspace = true
clap.workspace = true
