[package]
name = "data-dict-cli"
description = "Command-line tool for data-dict.yaml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "data-dict"
path = "src/main.rs"

[features]
# Bundles the language server in, behind a flag so a plain install stays lean.
lsp = ["dep:data-dict-lsp"]

[dependencies]
data-dict.workspace = true
data-dict-parquet.workspace = true
data-dict-lsp = { workspace = true, optional = true }
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta = "1"
