[package]
name = "data-dict-parquet"
description = "Parquet reader for data-dict.yaml validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# `snap` adds Snappy decompression, needed by `null_report` to read data pages
# (the most common parquet codec). Schema reading alone needs no codec.
parquet = { workspace = true, features = ["snap"] }
