[package]
name = "data-dict-parquet"
description = "Parquet reader for data-dict.yaml validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
parquet = { workspace = true, features = [
  "snap",
  "flate2",
  "lz4",
  "zstd",
  "brotli"
] }
rayon = "1"
hashbrown = "0.15"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "uniqueness"
harness = false

[[bench]]
name = "foreign_key"
harness = false
