[package]
name = "data-dict"
description = "Core library for the data-dict.yaml specification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quarto-yaml-validation.workspace = true
quarto-yaml = { git = "https://github.com/quarto-dev/q2", branch = "main" }
quarto-source-map = { git = "https://github.com/quarto-dev/q2", branch = "main" }
