[package]
name = "data-dict"
description = "Core library for the data-dict.yaml specification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
data-dict-parquet.workspace = true
quarto-yaml-validation.workspace = true
quarto-yaml = { git = "https://github.com/quarto-dev/q2", branch = "main" }
quarto-source-map = { git = "https://github.com/quarto-dev/q2", branch = "main" }
quarto-error-reporting = { git = "https://github.com/quarto-dev/q2", branch = "main" }
indexmap = "2"
serde.workspace = true

[dev-dependencies]
insta = "1"
indoc = "2"
parquet.workspace = true
serde_json.workspace = true
