[package]
name = "data-dict"
description = "Core library for the data-dict.yaml specification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
data-dict-parquet.workspace = true
quarto-yaml.workspace = true
quarto-yaml-validation.workspace = true
quarto-source-map.workspace = true
annotate-snippets.workspace = true
serde.workspace = true
chrono.workspace = true
regex.workspace = true

[dev-dependencies]
insta = "1"
indoc = "2"
parquet.workspace = true
serde_json.workspace = true
